Set seed in MNIST example

--- a/docs/source/examples/data_drift/MMD_advance.ipynb
+++ b/docs/source/examples/data_drift/MMD_advance.ipynb
@@ -23,8 +23,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:24.694575630Z",
-     "start_time": "2023-05-30T10:55:22.581176588Z"
+     "end_time": "2023-05-30T10:59:05.624233535Z",
+     "start_time": "2023-05-30T10:59:03.585665664Z"
     }
    }
   },
@@ -78,8 +78,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:24.699567375Z",
-     "start_time": "2023-05-30T10:55:24.697407345Z"
+     "end_time": "2023-05-30T10:59:05.628764712Z",
+     "start_time": "2023-05-30T10:59:05.627004685Z"
     }
    }
   },
@@ -88,14 +88,15 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "set_seed(seed=31)\n",
+    "seed = 31\n",
+    "set_seed(seed=seed)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:24.704600769Z",
-     "start_time": "2023-05-30T10:55:24.700001190Z"
+     "end_time": "2023-05-30T10:59:05.638432164Z",
+     "start_time": "2023-05-30T10:59:05.629370537Z"
     }
    }
   },
@@ -155,8 +156,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:24.815681707Z",
-     "start_time": "2023-05-30T10:55:24.708720511Z"
+     "end_time": "2023-05-30T10:59:05.702121860Z",
+     "start_time": "2023-05-30T10:59:05.642938709Z"
     }
    }
   },
@@ -184,8 +185,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:24.829946501Z",
-     "start_time": "2023-05-30T10:55:24.819590837Z"
+     "end_time": "2023-05-30T10:59:05.707334656Z",
+     "start_time": "2023-05-30T10:59:05.704470860Z"
     }
    }
   },
@@ -213,8 +214,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:25.104657438Z",
-     "start_time": "2023-05-30T10:55:24.827007325Z"
+     "end_time": "2023-05-30T10:59:05.979946688Z",
+     "start_time": "2023-05-30T10:59:05.707693016Z"
     }
    }
   },
@@ -228,7 +229,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "27a4c3e166934450a7de4ef4ca7de2d0"
+       "model_id": "219e2135089c43c4819ce55e4a75f62f"
       }
      },
      "metadata": {},
@@ -240,7 +241,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "bd9fdb86a5b24f5f9e2e3345b9d34ab9"
+       "model_id": "a4b0fc715a6f4060bf73e54e52485c24"
       }
      },
      "metadata": {},
@@ -252,7 +253,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fcd20fd7c97c4780b743abffad29c38b"
+       "model_id": "be4c991d71ea4acfa26c6eb46152eced"
       }
      },
      "metadata": {},
@@ -267,8 +268,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:38.686881148Z",
-     "start_time": "2023-05-30T10:55:25.092414755Z"
+     "end_time": "2023-05-30T10:59:19.009929207Z",
+     "start_time": "2023-05-30T10:59:05.980163014Z"
     }
    }
   },
@@ -320,8 +321,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:38.695484705Z",
-     "start_time": "2023-05-30T10:55:38.693521691Z"
+     "end_time": "2023-05-30T10:59:19.016446292Z",
+     "start_time": "2023-05-30T10:59:19.014644824Z"
     }
    }
   },
@@ -377,8 +378,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:38.705425461Z",
-     "start_time": "2023-05-30T10:55:38.699302194Z"
+     "end_time": "2023-05-30T10:59:19.026310338Z",
+     "start_time": "2023-05-30T10:59:19.022983287Z"
     }
    }
   },
@@ -415,8 +416,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:38.724382022Z",
-     "start_time": "2023-05-30T10:55:38.707481011Z"
+     "end_time": "2023-05-30T10:59:19.057730379Z",
+     "start_time": "2023-05-30T10:59:19.032746612Z"
     }
    }
   },
@@ -443,8 +444,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:38.724747848Z",
-     "start_time": "2023-05-30T10:55:38.712729262Z"
+     "end_time": "2023-05-30T10:59:19.058312236Z",
+     "start_time": "2023-05-30T10:59:19.035782753Z"
     }
    }
   },
@@ -479,8 +480,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:55:38.724896175Z",
-     "start_time": "2023-05-30T10:55:38.721135894Z"
+     "end_time": "2023-05-30T10:59:19.105643133Z",
+     "start_time": "2023-05-30T10:59:19.047948623Z"
     }
    }
   },
@@ -544,8 +545,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:04.767397385Z",
-     "start_time": "2023-05-30T10:55:38.726819431Z"
+     "end_time": "2023-05-30T10:59:47.264142453Z",
+     "start_time": "2023-05-30T10:59:19.089321861Z"
     }
    }
   },
@@ -579,8 +580,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:04.950434305Z",
-     "start_time": "2023-05-30T10:56:04.777115555Z"
+     "end_time": "2023-05-30T10:59:47.423146947Z",
+     "start_time": "2023-05-30T10:59:47.269056052Z"
     }
    }
   },
@@ -596,8 +597,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:05.039933201Z",
-     "start_time": "2023-05-30T10:56:04.956171589Z"
+     "end_time": "2023-05-30T10:59:47.474200531Z",
+     "start_time": "2023-05-30T10:59:47.421650323Z"
     }
    }
   },
@@ -622,8 +623,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:05.161646665Z",
-     "start_time": "2023-05-30T10:56:04.993879087Z"
+     "end_time": "2023-05-30T10:59:47.577348930Z",
+     "start_time": "2023-05-30T10:59:47.444681975Z"
     }
    }
   },
@@ -641,8 +642,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:05.232539637Z",
-     "start_time": "2023-05-30T10:56:05.163478006Z"
+     "end_time": "2023-05-30T10:59:47.586625112Z",
+     "start_time": "2023-05-30T10:59:47.578521191Z"
     }
    }
   },
@@ -682,8 +683,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:05.233044602Z",
-     "start_time": "2023-05-30T10:56:05.205372157Z"
+     "end_time": "2023-05-30T10:59:47.592475648Z",
+     "start_time": "2023-05-30T10:59:47.590128256Z"
     }
    }
   },
@@ -717,8 +718,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:05.233227667Z",
-     "start_time": "2023-05-30T10:56:05.205909491Z"
+     "end_time": "2023-05-30T10:59:47.650929230Z",
+     "start_time": "2023-05-30T10:59:47.597439782Z"
     }
    }
   },
@@ -758,8 +759,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:05.623125162Z",
-     "start_time": "2023-05-30T10:56:05.206165884Z"
+     "end_time": "2023-05-30T10:59:47.898643949Z",
+     "start_time": "2023-05-30T10:59:47.604452347Z"
     }
    }
   },
@@ -782,7 +783,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ef5fe94f121a4150aa9e8874042e9bf1"
+       "model_id": "4a5bdefe47624821b7adcd44a79ba0d1"
       }
      },
      "metadata": {},
@@ -794,7 +795,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fcc301ce702e4e678f3ef6d55676d170"
+       "model_id": "426e693e29bb41eaac50893d69028d50"
       }
      },
      "metadata": {},
@@ -808,8 +809,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:31.431112558Z",
-     "start_time": "2023-05-30T10:56:05.630885091Z"
+     "end_time": "2023-05-30T11:00:09.289071103Z",
+     "start_time": "2023-05-30T10:59:47.912664571Z"
     }
    }
   },
@@ -826,8 +827,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:31.836472141Z",
-     "start_time": "2023-05-30T10:56:31.433681885Z"
+     "end_time": "2023-05-30T11:00:09.744269693Z",
+     "start_time": "2023-05-30T11:00:09.291319820Z"
     }
    }
   },
@@ -850,8 +851,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:31.841834712Z",
-     "start_time": "2023-05-30T10:56:31.838284468Z"
+     "end_time": "2023-05-30T11:00:09.749162153Z",
+     "start_time": "2023-05-30T11:00:09.745065783Z"
     }
    }
   },
@@ -878,7 +879,7 @@
     "    callbacks=[\n",
     "        PermutationTestOnBatchData(\n",
     "            num_permutations=1000,\n",
-    "            random_state=31,\n",
+    "            random_state=seed,\n",
     "            num_jobs=-1,\n",
     "            name=\"permutation_test\",\n",
     "            verbose=False,\n",
@@ -890,8 +891,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:31.877989911Z",
-     "start_time": "2023-05-30T10:56:31.845500442Z"
+     "end_time": "2023-05-30T11:00:09.784650853Z",
+     "start_time": "2023-05-30T11:00:09.753257520Z"
     }
    }
   },
@@ -907,8 +908,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:31.878379128Z",
-     "start_time": "2023-05-30T10:56:31.860574782Z"
+     "end_time": "2023-05-30T11:00:09.785037949Z",
+     "start_time": "2023-05-30T11:00:09.769722795Z"
     }
    }
   },
@@ -956,8 +957,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:49.118416872Z",
-     "start_time": "2023-05-30T10:56:31.867044787Z"
+     "end_time": "2023-05-30T11:00:25.811524192Z",
+     "start_time": "2023-05-30T11:00:09.775407256Z"
     }
    }
   },
@@ -1036,8 +1037,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T10:56:52.836152089Z",
-     "start_time": "2023-05-30T10:56:49.119134241Z"
+     "end_time": "2023-05-30T11:00:29.583478791Z",
+     "start_time": "2023-05-30T11:00:25.842338188Z"
     }
    }
   },
