Change MNIST example permutation tests x label to MMD unbiased

--- a/docs/source/examples/data_drift/MMD_advance.ipynb
+++ b/docs/source/examples/data_drift/MMD_advance.ipynb
@@ -1029,7 +1029,7 @@
     "    ax.legend(fontsize=8)\n",
     "\n",
     "fig.suptitle(\"Permutation tests\", fontsize=\"x-large\")\n",
-    "fig.supxlabel(\"Distance\")\n",
+    "fig.supxlabel(\"MMD²\")\n",
     "fig.supylabel(\"Density\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
