Set seed in bivariate example

--- a/docs/source/examples/data_drift/MMD_simple.ipynb
+++ b/docs/source/examples/data_drift/MMD_simple.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:24:39.592676963Z",
-     "start_time": "2023-05-30T11:24:38.752344505Z"
+     "end_time": "2023-05-30T11:29:12.673773560Z",
+     "start_time": "2023-05-30T11:29:11.794598730Z"
     }
    }
   },
@@ -77,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:24:39.601388222Z",
-     "start_time": "2023-05-30T11:24:39.595220683Z"
+     "end_time": "2023-05-30T11:29:12.674354346Z",
+     "start_time": "2023-05-30T11:29:12.673181781Z"
     }
    }
   },
@@ -127,8 +127,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:24:39.608594439Z",
-     "start_time": "2023-05-30T11:24:39.598362939Z"
+     "end_time": "2023-05-30T11:29:12.674773130Z",
+     "start_time": "2023-05-30T11:29:12.673886521Z"
     }
    }
   },
@@ -143,10 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "np.random.seed(31)\n",
+    "seed = 31\n",
+    "np.random.seed(seed)\n",
     "\n",
     "num_samples = 200\n",
     "\n",
@@ -164,8 +165,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:26:41.690399408Z",
-     "start_time": "2023-05-30T11:26:41.679178223Z"
+     "end_time": "2023-05-30T11:29:12.674967165Z",
+     "start_time": "2023-05-30T11:29:12.674147545Z"
     }
    }
   },
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "alpha = 0.01"
@@ -195,8 +196,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:26:42.204248073Z",
-     "start_time": "2023-05-30T11:26:42.198695509Z"
+     "end_time": "2023-05-30T11:29:12.675098220Z",
+     "start_time": "2023-05-30T11:29:12.674413383Z"
     }
    }
   },
@@ -212,13 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "1.2590251585463998"
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,8 +235,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:26:43.329019526Z",
-     "start_time": "2023-05-30T11:26:43.291981292Z"
+     "end_time": "2023-05-30T11:29:12.675350616Z",
+     "start_time": "2023-05-30T11:29:12.674591707Z"
     }
    }
   },
@@ -250,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 10268.30it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 10565.58it/s]\n"
      ]
     }
    ],
@@ -265,7 +266,7 @@
     "    callbacks=[\n",
     "        PermutationTestOnBatchData(\n",
     "            num_permutations=1000,\n",
-    "            random_state=31,\n",
+    "            random_state=seed,\n",
     "            num_jobs=-1,\n",
     "            name=\"permutation_test\",\n",
     "            verbose=True,\n",
@@ -279,14 +280,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:26:44.738156952Z",
-     "start_time": "2023-05-30T11:26:44.496905590Z"
+     "end_time": "2023-05-30T11:29:12.965724338Z",
+     "start_time": "2023-05-30T11:29:12.674831710Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -307,8 +308,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:26:45.514588648Z",
-     "start_time": "2023-05-30T11:26:45.498548822Z"
+     "end_time": "2023-05-30T11:29:12.968937738Z",
+     "start_time": "2023-05-30T11:29:12.899234654Z"
     }
    }
   },
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -407,8 +408,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T11:27:16.444774590Z",
-     "start_time": "2023-05-30T11:27:07.831497265Z"
+     "end_time": "2023-05-30T11:29:21.506878331Z",
+     "start_time": "2023-05-30T11:29:12.911649556Z"
     }
    }
   },
