Fix DDM_advance.ipynb comments

--- a/docs/source/examples/concept_drift/DDM_advance.ipynb
+++ b/docs/source/examples/concept_drift/DDM_advance.ipynb
@@ -30,7 +30,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Example of how to use the supervised method DDM {cite:p}`gama2004learning` with a data stream blocks (concepts) from the SEA {cite:p}`street2001streaming` generator."
+    "Example of how to use the concept drift detection method DDM {cite:p}`gama2004learning` with a data stream blocks (concepts) from the SEA {cite:p}`street2001streaming` generator."
    ],
    "metadata": {
     "collapsed": false
@@ -113,15 +113,6 @@
     "detector = DDM(\n",
     "    config=config,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Frouros provides some helper classes, called modes, to facilitate the interaction with the detector. In this case, NormalMode (does not use incremental learning) only checks if drift is ocurring and resets detector's statistics in case drift is detected. It must receive a value function (usually an error function) that is used by the detector to update its inner statistics using predicted and ground-truth values. Optionally, a metrics parameter can also be provided with the intention of obtaining additional information on the performance of the model over time."
    ],
    "metadata": {
     "collapsed": false
