Add prior probability shift documentation reference

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -117,3 +117,14 @@
   year={2022},
   publisher={INFORMS}
 }
+
+@article{storkey2009training,
+  title={When training and test sets are different: characterizing learning transfer},
+  author={Storkey, Amos J},
+  journal={Dataset shift in machine learning},
+  volume={30},
+  number={3-28},
+  pages={6},
+  year={2009},
+  publisher={Citeseer}
+}
