Fix reject H0 condition in MMD_advance.ipynb

--- a/docs/source/examples/data_drift/MMD_advance.ipynb
+++ b/docs/source/examples/data_drift/MMD_advance.ipynb
@@ -956,7 +956,7 @@
     "    mmd, callbacks_logs = detector.compare(X=sample)\n",
     "    permutation_test_logs[type_] = copy.copy(callbacks_logs[\"permutation_test\"])\n",
     "    mmd, p_value = mmd.distance, callbacks_logs[\"permutation_test\"][\"p_value\"]\n",
-    "    print(f\"{type_}:\\n  MMD statistic={round(mmd, 4)}, p-value={round(p_value, 4)}, drift={p_value < alpha}\")"
+    "    print(f\"{type_}:\\n  MMD statistic={round(mmd, 4)}, p-value={round(p_value, 4)}, drift={p_value <= alpha}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -1014,7 +1014,7 @@
     "    ax.plot(xs, permutation_tests_density, label=\"KDE\")\n",
     "    ax.axvline(observed_statistic, color=\"green\", linestyle=\"--\", label=\"Observed distance\")\n",
     "    ax.set_title(type_)\n",
-    "    drift = p_value < alpha\n",
+    "    drift = p_value <= alpha\n",
     "    ax.text(0.88, 0.15, \"Drift\" if drift else \"No drift\", transform=ax.transAxes, fontsize=12, bbox={\"boxstyle\": \"round\", \"facecolor\": \"red\" if drift else \"green\", \"alpha\":0.5})\n",
     "\n",
     "    # Get the y limit\n",
