Fix reject H0 condition in MMD_simple.ipynb

--- a/docs/source/examples/data_drift/MMD_simple.ipynb
+++ b/docs/source/examples/data_drift/MMD_simple.ipynb
@@ -306,7 +306,7 @@
    ],
    "source": [
     "print(f\"MMD statistic={round(mmd.distance, 3)}, p-value={round(p_value, 3)}\")\n",
-    "if p_value < alpha:\n",
+    "if p_value <= alpha:\n",
     "    print(\"Drift detected. We can reject H0, so both samples come from different distributions.\")\n",
     "else:\n",
     "    print(\"No drift detected. We fail to reject H0, so both samples come from the same distribution.\")"
