--- a/docs/source/examples/data_drift/multivariate_detector.ipynb
+++ b/docs/source/examples/data_drift/multivariate_detector.ipynb
@@ -252,7 +252,7 @@
     "_, callback_logs = detector.compare(X=X_test)\n",
     "p_value = callback_logs[\"permutation_test\"][\"p_value\"]\n",
     "print(f\"p-value: {round(p_value, 4)}\")\n",
-    "if p_value < alpha:\n",
+    "if p_value <= alpha:\n",
     "    print(\"Data drift detected\")\n",
     "else:\n",
     "    print(\"No data drift detected\")\n",
@@ -352,7 +352,7 @@
     "_, callback_logs = detector.compare(X=X_test_noise)\n",
     "p_value = callback_logs[\"permutation_test\"][\"p_value\"]\n",
     "print(f\"p-value: {round(p_value, 4)}\")\n",
-    "if p_value < alpha:\n",
+    "if p_value <= alpha:\n",
     "    print(\"Data drift detected\")\n",
     "else:\n",
     "    print(\"No data drift detected\")\n",
