Fix reject H0 condition in univariate_detector.ipynb

--- a/docs/source/examples/data_drift/univariate_detector.ipynb
+++ b/docs/source/examples/data_drift/univariate_detector.ipynb
@@ -204,7 +204,7 @@
     "    print(f\"Feature {i+1}:\")\n",
     "    p_value = detector.compare(X=X_test[:, i])[0].p_value\n",
     "    print(f\"\\tp-value: {round(p_value, 4)}\")\n",
-    "    if p_value < alpha:\n",
+    "    if p_value <= alpha:\n",
     "        print(\"\\tData drift detected\\n\")\n",
     "    else:\n",
     "        print(\"\\tNo data drift detected\\n\")\n",
@@ -265,7 +265,7 @@
     "    print(f\"Feature {i}:\")\n",
     "    p_value = detector.compare(X=X_test_noise[:, i])[0].p_value\n",
     "    print(f\"\\tp-value: {round(p_value, 4)}\")\n",
-    "    if p_value < alpha:\n",
+    "    if p_value <= alpha:\n",
     "        print(\"\\tData drift detected\\n\")\n",
     "    else:\n",
     "        print(\"\\tNo data drift detected\\n\")\n",
@@ -335,7 +335,7 @@
     "    print(f\"Feature {i}:\")\n",
     "    p_value = detector.compare(X=X_test_noise[:, i])[0].p_value\n",
     "    print(f\"\\tp-value: {round(p_value, 4)}\")\n",
-    "    if p_value < alpha:\n",
+    "    if p_value <= alpha:\n",
     "        print(\"\\tData drift detected\\n\")\n",
     "    else:\n",
     "        print(\"\\tNo data drift detected\\n\")\n",
