Fix error to use numpy item() method in DDM_simple.ipynb

--- a/docs/source/examples/concept_drift/DDM_simple.ipynb
+++ b/docs/source/examples/concept_drift/DDM_simple.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:26:13.216424950Z",
+     "start_time": "2023-08-03T10:26:12.464032816Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -43,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:frouros:Trying to download data from https://nextcloud.ifca.es/index.php/s/2coqgBEpa82boLS/download to /tmp/tmpagpyvswq\n"
+      "INFO:frouros:Trying to download data from https://nextcloud.ifca.es/index.php/s/2coqgBEpa82boLS/download to /tmp/tmpvrhnah8i\n"
      ]
     }
    ],
@@ -59,7 +63,11 @@
     "X_ref, y_ref, X_test, y_test = X[:split_idx], y[:split_idx].ravel(), X[split_idx:], y[split_idx:]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:26:14.629676415Z",
+     "start_time": "2023-08-03T10:26:13.219694293Z"
+    }
    }
   },
   {
@@ -90,7 +98,11 @@
     "pipeline.fit(X=X_ref, y=y_ref)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:26:14.746515595Z",
+     "start_time": "2023-08-03T10:26:14.631972871Z"
+    }
    }
   },
   {
@@ -105,7 +117,11 @@
     "detector = DDM(config=config)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:26:14.767517723Z",
+     "start_time": "2023-08-03T10:26:14.717692323Z"
+    }
    }
   },
   {
@@ -132,7 +148,7 @@
    "source": [
     "for i, (X, y) in enumerate(zip(X_test, y_test)):\n",
     "    y_pred = pipeline.predict(X.reshape(1, -1))\n",
-    "    error = 1 - int(y_pred == y)\n",
+    "    error = 1 - (y_pred.item() == y.item())\n",
     "    detector.update(value=error)\n",
     "    status = detector.status\n",
     "    if status[\"drift\"]:\n",
@@ -140,7 +156,11 @@
     "        break"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:26:15.090283773Z",
+     "start_time": "2023-08-03T10:26:14.762080041Z"
+    }
    }
   },
   {
