Fix error to use numpy item() method in DDM_advance.ipynb

--- a/docs/source/examples/concept_drift/DDM_advance.ipynb
+++ b/docs/source/examples/concept_drift/DDM_advance.ipynb
@@ -15,7 +15,11 @@
     "from frouros.metrics.prequential_error import PrequentialError"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:53.570552027Z",
+     "start_time": "2023-08-03T10:20:52.101805211Z"
+    }
    }
   },
   {
@@ -69,7 +73,11 @@
     "X_ref, y_ref, X_test, y_test = X[:split_idx], y[:split_idx], X[split_idx:], y[split_idx:].reshape(-1, 1)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:53.780330594Z",
+     "start_time": "2023-08-03T10:20:53.576182448Z"
+    }
    }
   },
   {
@@ -93,7 +101,11 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:53.791824805Z",
+     "start_time": "2023-08-03T10:20:53.783729817Z"
+    }
    }
   },
   {
@@ -115,7 +127,11 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:53.817945430Z",
+     "start_time": "2023-08-03T10:20:53.792298397Z"
+    }
    }
   },
   {
@@ -146,7 +162,11 @@
     "model.fit(X=X_ref, y=y_ref)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:53.885710194Z",
+     "start_time": "2023-08-03T10:20:53.803561179Z"
+    }
    }
   },
   {
@@ -172,7 +192,11 @@
     "]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:53.886420130Z",
+     "start_time": "2023-08-03T10:20:53.874259123Z"
+    }
    }
   },
   {
@@ -198,7 +222,7 @@
    ],
    "source": [
     "def error_scorer(y_true, y_pred):  # Error function\n",
-    "    return 1 - int(y_true == y_pred)\n",
+    "    return 1 - (y_true.item() == y_pred.item())\n",
     "\n",
     "estimator_name = DecisionTreeClassifier.__name__\n",
     "detector_name = f\"{estimator_name} + {DDM.__name__}\"\n",
@@ -233,7 +257,11 @@
     "        idx_warning.append(i)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:20:55.472325704Z",
+     "start_time": "2023-08-03T10:20:53.874561107Z"
+    }
    }
   },
   {
@@ -324,7 +352,11 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-03T10:21:00.064313074Z",
+     "start_time": "2023-08-03T10:20:55.479268046Z"
+    }
    }
   },
   {
