Remove unused additonal parameters from update method in DDM_advance.ipynb

--- a/docs/source/examples/concept_drift/DDM_advance.ipynb
+++ b/docs/source/examples/concept_drift/DDM_advance.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:53.570552027Z",
-     "start_time": "2023-08-03T10:20:52.101805211Z"
+     "end_time": "2023-08-04T15:03:16.995698350Z",
+     "start_time": "2023-08-04T15:03:15.553678479Z"
     }
    }
   },
@@ -75,8 +75,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:53.780330594Z",
-     "start_time": "2023-08-03T10:20:53.576182448Z"
+     "end_time": "2023-08-04T15:03:17.923701011Z",
+     "start_time": "2023-08-04T15:03:17.794588799Z"
     }
    }
   },
@@ -103,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:53.791824805Z",
-     "start_time": "2023-08-03T10:20:53.783729817Z"
+     "end_time": "2023-08-04T15:03:19.365768365Z",
+     "start_time": "2023-08-04T15:03:19.328254319Z"
     }
    }
   },
@@ -129,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:53.817945430Z",
-     "start_time": "2023-08-03T10:20:53.792298397Z"
+     "end_time": "2023-08-04T15:03:20.694770635Z",
+     "start_time": "2023-08-04T15:03:20.686368260Z"
     }
    }
   },
@@ -164,8 +164,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:53.885710194Z",
-     "start_time": "2023-08-03T10:20:53.803561179Z"
+     "end_time": "2023-08-04T15:03:21.628812477Z",
+     "start_time": "2023-08-04T15:03:21.556678314Z"
     }
    }
   },
@@ -194,8 +194,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:53.886420130Z",
-     "start_time": "2023-08-03T10:20:53.874259123Z"
+     "end_time": "2023-08-04T15:03:22.781642788Z",
+     "start_time": "2023-08-04T15:03:22.767447044Z"
     }
    }
   },
@@ -234,7 +234,7 @@
     "for i, (X, y) in enumerate(zip(X_test, y_test)):\n",
     "    y_pred = model.predict(X=X.reshape(1, -1))  # Model's prediction\n",
     "    error = error_scorer(y_true=y, y_pred=y_pred)\n",
-    "    _ = detector.update(value=error, X=X, y=y)  # Detector's update\n",
+    "    _ = detector.update(value=error)  # Detector's update\n",
     "\n",
     "    # All the following lines are optional and only used for plotting the whole process\n",
     "    for metric_historic, metric in zip(metrics_historic_detector.keys(), metrics):\n",
@@ -259,8 +259,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:20:55.472325704Z",
-     "start_time": "2023-08-03T10:20:53.874561107Z"
+     "end_time": "2023-08-04T15:03:27.525127333Z",
+     "start_time": "2023-08-04T15:03:26.083932828Z"
     }
    }
   },
@@ -354,8 +354,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-03T10:21:00.064313074Z",
-     "start_time": "2023-08-03T10:20:55.479268046Z"
+     "end_time": "2023-08-04T15:03:32.354390172Z",
+     "start_time": "2023-08-04T15:03:28.666081141Z"
     }
    }
   },
