Fix GaussianBlur and ElasticTransform links

--- a/docs/source/examples/data_drift/MMD_advance.ipynb
+++ b/docs/source/examples/data_drift/MMD_advance.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "A more advanced example is shown below, where MMD {cite:p}`JMLR:v13:gretton12a` is applied as a drift detector to the well-known [MNIST](http://yann.lecun.com/exdb/mnist/) image dataset.\n",
     "\n",
-    "The goal is to apply [GaussianBlur](https://pytorch.org/vision/stable/auto_examples/plot_transforms.html#gaussianblur) and [ElasticTransform](https://pytorch.org/vision/stable/auto_examples/plot_transforms.html#elastictransform) transformations to some of the images in order to simulate a drift process at the feature level (data drift) that would likely end up affecting the performance of a machine learning model."
+    "The goal is to apply [GaussianBlur](https://pytorch.org/vision/stable/generated/torchvision.transforms.GaussianBlur.html#gaussianblur) and [ElasticTransform](https://pytorch.org/vision/0.15/generated/torchvision.transforms.ElasticTransform.html#elastictransform) transformations to some of the images in order to simulate a drift process at the feature level (data drift) that would likely end up affecting the performance of a machine learning model."
    ],
    "metadata": {
     "collapsed": false
